--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/sanctum": "^2.13",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
-        "srmklive/paypal": "^3.0"
+        "paypal/rest-api-sdk-php": "*",
+        "srmklive/paypal": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
