--- a/.env
+++ b/.env
@@ -47,6 +47,7 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
+MAP_KEY=AIzaSyAxrWlbuESbKOX8ZEtiflupNNcVjesb5sA
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
