--- a/.env
+++ b/.env
@@ -49,5 +49,9 @@ PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
 MAP_KEY=AIzaSyAxrWlbuESbKOX8ZEtiflupNNcVjesb5sA
 
+
+FFMPEG_BINARIES=gendercomfortable
+FFPROBE_BINARIES=10900912
+
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
