--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^7.3|^8.0",
         "barryvdh/laravel-dompdf": "^1.0",
         "doctrine/dbal": "^3.2",
+        "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
@@ -16,6 +17,7 @@
         "laravel/ui": "^3.4",
         "paypal/rest-api-sdk-php": "*",
         "pbmedia/laravel-ffmpeg": "^7.5.1",
+        "php-ffmpeg/php-ffmpeg": "^1.0",
         "srmklive/paypal": "~3.0",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
